heatmap changed and discussion added

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1335,6 +1335,7 @@ Granularities},
   publisher={Wadsworth Publishing Company}
 }
 
+
 @Article{inference,
   author = {Andreas Buja and Dianne Cook and Heike Hofmann and Michael Lawrence and Eun-Kyung Lee and Deborah F. Swayne and Hadley Wickham},
   doi = {10.1098/rsta.2009.0120},
@@ -1381,7 +1382,14 @@ Granularities},
    month     =  sep,
    year      =  2013
  }
- 
+
+@Manual{@R-patchwork,
+    title = {patchwork: The Composer of Plots},
+    author = {Thomas Lin Pedersen},
+    year = {2020},
+    note = {R package version 1.1.0},
+    url = {https://CRAN.R-project.org/package=patchwork},
+  }
 
 #### 
 
