--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -14,18 +14,30 @@ authors:
 
 - name: Dianne Cook
   affiliation: Department of Econometrics and Business Statistics, Monash University, Australia
+keywords:
+- data visualization
+- periodicities
+- time granularities
+- cyclic granularities
+- permutation tests
+- Jensen-Shannon distances
+- smart meter data
+- R
 
+abstract: |
+ Deconstructing a time index into time granularities can assist in exploration and automated analysis of large temporal data sets. This paper describes classes of time deconstructions using linear and cyclic time granularities. Linear granularities respect the linear progression of time such as hours, days, weeks and months. Cyclic granularities can be circular such as hour-of-the-day, quasi-circular such as day-of-the-month, and aperiodic such as public holidays. The hierarchical structure of granularities creates a nested ordering: hour-of-the-day and second-of-the-minute are single-order-up. Hour-of-the-week is multiple-order-up, because it passes over day-of-the-week. Methods are provided for creating all possible granularities for a time index. A recommendation algorithm provides an indication whether a pair of granularities can be meaningfully examined together (a "harmony"), or when they cannot (a "clash").  
+ 
+ Time granularities can be used to create data visualizations to explore for periodicities, associations and anomalies. The granularities form categorical variables (ordered or unordered) which induce groupings of the observations. Assuming a numeric response variable, the resulting graphics are then displays of distributions compared across combinations of categorical variables.  
+  
+ The methods implemented in the open source R package `gravitas` are consistent with a tidy workflow, with probability distributions examined using the range of graphics available in `ggplot2`.
 
-bibliography: bibliography.bib
+bibliography: [bibliography.bib]
 preamble: >
-  \usepackage{mathtools,booktabs,amsthm,todonotes,colortbl}
+  \usepackage{mathtools,amssymb,booktabs,amsthm,todonotes,colortbl}
   \def\mod{~\text{mod}~}
   \newtheorem{definition}{Definition}
   \usepackage{mathptmx}
   \usepackage{caption}
-  \usepackage{algorithm}
-  \usepackage{algorithmicx}
-  \usepackage{algpseudocode}
   \DeclareCaptionStyle{italic}{labelfont={bf},textfont={it},labelsep=colon}
   \captionsetup[figure]{style=italic,format=hang,singlelinecheck=true}
   \captionsetup[table]{style=italic,format=hang,singlelinecheck=true}
@@ -33,12 +45,14 @@ preamble: >
   \def\vspacing{\setlength{\aboverulesep}{0.4ex}\setlength{\belowrulesep}{0.65ex}}
 output:
   bookdown::pdf_book:
-    #base_format: rticles::asa_article
+    base_format: rticles::asa_article
     fig_height: 5
     fig_width: 8
     fig_caption: yes
     dev: "pdf"
+    keep_tex: yes
 ---
+
 
 ```{r initial, echo = FALSE, cache = FALSE, include = FALSE}
 options("knitr.graphics.auto_pdf" = TRUE,
